lab-2/ingress-dnsmasq.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-ingress
spec:
  rules:
  - host: lb.test.kind.cluster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lb-service
            port: 
              number: 5678
